[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "viz2psy"
version = "0.1.0"
description = "Extract psychological and perceptual features from images using multiple computational models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Brice Hutcheson", email = "bhutch@uoregon.edu"},
]
keywords = [
    "image features",
    "memorability",
    "emotion",
    "computer vision",
    "psychology",
    "perception",
    "deep learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "Pillow>=9.0",
    "pandas>=1.5",
    "tqdm>=4.60",
    "resmem>=1.1",
    "open-clip-torch>=2.24",
    "scikit-image>=0.21",
    "deepgaze-pytorch>=1.0",
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "psutil>=5.9",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "wordcloud>=1.9",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = ["pytest", "ipython", "commitizen>=3.12"]
interactive = ["plotly>=5.18", "kaleido>=0.2"]
hypertools = ["hypertools>=0.8"]

[project.scripts]
viz2psy = "viz2psy.cli:main"
viz2psy-viz = "viz2psy.viz.cli:main"

[project.urls]
Homepage = "https://github.com/bhutch/viz2psy"
Repository = "https://github.com/bhutch/viz2psy"
Issues = "https://github.com/bhutch/viz2psy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/viz2psy/__init__.py:__version__",
]
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
